--- a/mods/better-stats.pw.toml
+++ b/mods/better-stats.pw.toml
@@ -1,6 +1,6 @@
 name = "Better Statistics Screen"
 filename = "betterstats-3.12.6+fabric-1.20.1.jar"
-side = "both"
+side = "client"
 
 [download]
 url = "https://cdn.modrinth.com/data/n6PXGAoM/versions/Ktw36uDC/betterstats-3.12.6%2Bfabric-1.20.1.jar"
