--- a/mods/geckoanimfix.pw.toml
+++ b/mods/geckoanimfix.pw.toml
@@ -2,6 +2,11 @@ name = "Iris/Oculus & GeckoLib Compat"
 filename = "GeckoLibIrisCompat-Fabric-1.0.0.jar"
 side = "client"
 
+[option]
+optional = true
+default = false
+description = "make game pretty"
+
 [download]
 url = "https://cdn.modrinth.com/data/TbriQCWD/versions/3Q4qBNwT/GeckoLibIrisCompat-Fabric-1.0.0.jar"
 hash-format = "sha512"
