--- a/mods/iris-flw-compat.pw.toml
+++ b/mods/iris-flw-compat.pw.toml
@@ -2,6 +2,11 @@ name = "Iris & Oculus Flywheel Compat"
 filename = "iris-flywheel-compat-fabric1.20.1+1.1.4.jar"
 side = "client"
 
+[option]
+optional = true
+default = false
+description = "make game pretty"
+
 [download]
 url = "https://cdn.modrinth.com/data/ndHYMY2K/versions/v3unHP1U/iris-flywheel-compat-fabric1.20.1%2B1.1.4.jar"
 hash-format = "sha512"
