--- a/resourcepacks/dark-atmosphere-and-dreadful-skies.pw.toml
+++ b/resourcepacks/dark-atmosphere-and-dreadful-skies.pw.toml
@@ -1,6 +1,6 @@
 name = "Dark Atmosphere and Dreadful Skies"
 filename = "DarkAtmosphere.zip"
-side = "both"
+side = "client"
 
 [download]
 hash-format = "sha1"
